# wildmagic-rocks

./: CONTRIBUTING.md  README.md  SECURITY.md  logging.json  pyproject.toml  surges.txt
src/wildmagicrocks/: app.py  config.py  model.py  server.py  util.py
static/: robots.txt
templates/: base.html  error.html  help.html  index.html  rules.html  surge.html  surges.html  table.html
